Renamed event detectors

--- a/test/dataManager.conf
+++ b/test/dataManager.conf
@@ -45,57 +45,57 @@ control_sub_port    = 50006
 #########################################
 
 # Type of event detector to use (options are:
-# inotifyx_detector, watchdog_detector, zmq_detector, http_detector)
+# inotifyx_events, watchdog_events, zmq_events, http_events)
 # Inotifyx is not python3 compatible,
 # see https://bugs.launchpad.net/inotifyx/+bug/1006053
-event_detector_type = inotifyx_detector
-#event_detector_type = watchdog_detector
-#event_detector_type = zmq_detector
-#event_detector_type = http_detector
+event_detector_type = inotifyx_events
+#event_detector_type = watchdog_events
+#event_detector_type = zmq_events
+#event_detector_type = http_events
 
 # Subdirectories to be monitored and to store data to
-# (needed if eventDetector is inotifyx_detector or watchdog_detector
+# (needed if eventDetector is inotifyx_events or watchdog_events
 #  or if dataFetcher is file_fetcher)
 fix_subdirs          = ["commissioning", "current", "local"]
 
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current"
 # and "local" are monitored
-# (needed if event detector is inotifyx_detector or watchdog_detector)
+# (needed if event detector is inotifyx_events or watchdog_events)
 monitored_dir        = /opt/hidra/data/source
 
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
-# (needed if event detector is inotifyx_detector or watchdog_detector)
+# (needed if event detector is inotifyx_events or watchdog_events)
 monitored_events     = {"IN_CLOSE_WRITE": [".tif", ".cbf", ".nxs"],
                         "IN_MOVED_TO": [".log"]}
 
 # Number of events stored to look for doubles
-# (needed if eventDetector is inotifyx_detector or http_detector)
+# (needed if eventDetector is inotifyx_events or http_events)
 history_size         = 0
 
 # Flag describing if a clean up thread which regularly checks
 # if some files were missed should be activated
-# (needed if eventDetector is inotifyx_detector)
+# (needed if eventDetector is inotifyx_events)
 use_cleanup          = False
 
 # Intervall time (in seconds) used for clean up resp. checking of events
-# (only needed if event_detector_type is inotifyx_detector or watchdog_detector)
+# (only needed if event_detector_type is inotifyx_events or watchdog_events)
 action_time          = 10
 
 # Time (in seconds) since last modification after which a file will be seen as closed
-# (needed if eventDetector is inotifyx_detector (for clean up) or watchdog_detector)
+# (needed if eventDetector is inotifyx_events (for clean up) or watchdog_events)
 time_till_closed     = 2
 
 # ZMQ port to get events from
-# (needed if event_detector_type is zmq_detector)
+# (needed if event_detector_type is zmq_events)
 event_det_port       = 50003
 
 # IP of the Eiger detector
-# (needed if event_detector_type is http_detector)
+# (needed if event_detector_type is http_events)
 eiger_ip             = lsdma-lab04
 # API version of the Eiger detector
-# (needed if event_detector_type is http_detector)
+# (needed if event_detector_type is http_events)
 eiger_api_version    = 1.5.0
 
 
@@ -110,7 +110,7 @@ data_fetcher_type    = file_fetcher
 #data_fetcher_type    = http_fetcher
 
 # If "zmq_fetcher" is specified as data_fetcher_type it needs a port to listen to
-# (needed if event_detector_type is zmq_detector)
+# (needed if event_detector_type is zmq_events)
 data_fetcher_port    = 50010
 
 # Number of parallel data streams
