Fixed argument for config file in systemd service file

--- a/initscripts/hidra@.service
+++ b/initscripts/hidra@.service
@@ -7,7 +7,7 @@ After=network-online.target
 TimeoutStartSec=0
 WorkingDirectory=/opt/hidra
 User=%iuser
-ExecStart=/opt/hidra/src/sender/DataManager.py --verbose --configFile /opt/hidra/conf/%i.conf
+ExecStart=/opt/hidra/src/sender/DataManager.py --verbose --config_file /opt/hidra/conf/%i.conf
 
 [Install]
 WantedBy=multi-user.target
