Renamed module named to make them PEP8 compliant

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -6,7 +6,7 @@
 log_path            = /opt/hidra/logs
 
 # Filename used for logging
-log_name            = dataManager.log
+log_name            = datamanager.log
 
 # File size before rollover in B (linux only)
 # 10 MB
