Fixed bump versioning for release notes

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,7 +3,12 @@ current_version = 2.4.2
 tag = False
 commit = False
 
-files = docs/ReleaseNotes.txt freeze_setup.py src/APIs/hidra/_version.py src/shared/_version.py
+files = freeze_setup.py src/APIs/hidra/_version.py src/shared/_version.py
+
+[bumpversion:file:docs/ReleaseNotes.txt]
+search = HiDRA develop
+replace = HiDRA develop
+          HiDRA {new_version}
 
 [bumpversion:file:hidra.spec]
 search = %changelog
