Added hidra receiver unit file

--- a/conf/dataReceiver.conf
+++ b/conf/dataReceiver.conf
@@ -6,7 +6,7 @@
 log_path          = /opt/hidra/logs
 
 # Filename used for logging
-log_name          = dataReceiver.log
+log_name          = datareceiver.log
 
 # File size before rollover in B (linux only)
 # 100MB
@@ -26,8 +26,7 @@ whitelist           = None
 target_dir          = /opt/hidra/data/zmq_target
 
 # Local IP to connect dataStream to
-# zitpcx19282.desy.d
-data_stream_ip      = 131.169.185.121
+data_stream_ip      = zitpcx19282.desy.de
 
 # TCP port of data pipe
 data_stream_port    = 50100
