Added proc name into receiver config

--- a/conf/datareceiver.conf
+++ b/conf/datareceiver.conf
@@ -12,23 +12,27 @@ log_name          = datareceiver.log
 # 100MB
 log_size          = 104857600
 
+# Name with which the service should be running
+procname          = hidra-receiver
+
 #########################################
 ####   DataReceiver Configuration   ####
 #########################################
 #
 # List of hosts allowed to receive data from
 
-#whitelist           = a3p02.1-hosts
-whitelist           = None
-#whitelist           = ["localhost", "zitpcx19282.desy.de", "zitpcx22614", "lsdma-lab04"]
+#whitelist         = a3p02.1-hosts
+whitelist         = None
+#whitelist         = ["localhost", "zitpcx19282.desy.de", "zitpcx22614", "lsdma-lab04"]
 
 # Where incoming data will be stored to
-target_dir          = /opt/hidra/data/zmq_target
+target_dir        = /opt/hidra/data/zmq_target
 
 # Local IP to connect dataStream to
-data_stream_ip      = zitpcx19282.desy.de
+# data_stream_ip    = zitpcx22614w.desy.de
+data_stream_ip    = zitpcx19282.desy.de
 
 # TCP port of data pipe
-data_stream_port    = 50100
+data_stream_port  = 50100
 
 
