Minor change in documentation of config file

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -15,7 +15,7 @@ log_size            = 10485760
 # Name with which the service should be running
 procname            = hidra
 
-# IP of the interface to bind to for external communication
+# IP/DNS name of the interface to bind to for external communication
 ext_ip              = 0.0.0.0
 #ext_ip              = zitpcx19282
 #ext_ip              = 131.169.185.121 ; #zitpcx19282
@@ -100,7 +100,7 @@ time_till_closed     = 2
 # (needed if event_detector_type is zmq_events)
 event_det_port       = 50003
 
-# IP of the Eiger detector
+# IP/DNS name of the Eiger detector
 # (needed if event_detector_type is http_events)
 #haspp11e1m.desy.de
 #eiger_ip             = 192.168.138.52
