Updated config file
* updated comments
* by default all files types are monitored
* default number of workers increased

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -57,10 +57,14 @@ event_detector_type = inotifyx_events
 #event_detector_type = zmq_events
 #event_detector_type = http_events
 
-# Subdirectories to be monitored and to store data to
+# Subdirectories to be monitored and to store data to. These directory have to
+# exist when HiDRA is started and should not be removed during the run.
 # (needed if eventDetector is inotifyx_events or watchdog_events
 #  or if dataFetcher is file_fetcher)
 fix_subdirs          = ["commissioning", "current", "local"]
+#fix_subdirs          = ["commissioning/raw", "commissioning/scratch_bl",
+#                        "current/raw", "current/scratch_bl",
+#                        "local"]
 
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current"
@@ -72,8 +76,9 @@ monitored_dir        = /opt/hidra/data/source
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
 # (needed if event detector is inotifyx_events or watchdog_events)
-monitored_events     = {"IN_CLOSE_WRITE": [".tif", ".cbf", ".nxs"],
-                        "IN_MOVED_TO": [".log"]}
+monitored_events     = {"IN_CLOSE_WRITE": [""]}
+#monitored_events     = {"IN_CLOSE_WRITE": [".tif", ".cbf", ".nxs"],
+#                        "IN_MOVED_TO": [".log"]}
 #monitored events     = {"IN_MOVED_TO": [".tif", ".cbf", ".nxs"],
 #                        "IN_CLOSE_WRITE": [".log"]}
 #monitored_events     = {"NO_EVENT_MONITORED": [".cbf"]}
@@ -127,7 +132,7 @@ data_fetcher_type    = file_fetcher
 data_fetcher_port    = 50010
 
 # Number of parallel data streams
-number_of_streams    = 1
+number_of_streams    = 8
 
 # Enable ZMQ pipe into storage system
 # (uses the fixed_stream_host and fixed_stream_port)
@@ -135,7 +140,7 @@ use_data_stream      = False
 # Fixed host to send the data to with highest priority
 fixed_stream_host    = zitpcx19282
 #fixed_stream_host    = zitpcx22614w
-# Fixed Port to send the data to with highest priority
+# Fixed port to send the data to with highest priority
 fixed_stream_port    = 50100
 
 # Chunk size of file-parts getting send via zmq
@@ -148,7 +153,7 @@ chunksize            = 10485760
 # (needed if running on Windows)
 router_port          = 50004
 
-# Target to move the files into
+# Target to move the files into (needed if store_data is enabled)
 local_target         = /opt/hidra/data/target
 #local_target         = /gpfs
 
