Started on option: confirmation required before removing files

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -162,5 +162,11 @@ local_target         = /opt/hidra/data/target
 store_data           = False
 
 # Flag describing if the files should be removed from the source
+# options are:
+# True - data stays on the source
+# False - data is removed from the source after processing it
+# with_confirmation - only supported if use_data_stream is enabled;
+#                     data is removed from the source only after the target
+#                     sent an verification
 # (needed if data_fetcher_type is file_fetcher or http_fetcher)
 remove_data          = False
