Changed default whitelist in config

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -4,6 +4,7 @@
 
 # Path where the logfile will be created
 log_path            = /opt/hidra/logs
+#log_path            = /var/logs/hidra
 
 # Filename used for logging
 log_name            = datamanager.log
@@ -29,7 +30,8 @@ ext_ip              = 0.0.0.0
 com_port            = 50000
 
 # List of hosts allowed to connect
-whitelist           = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx22614w", "zitpcx22614.fritz.box", "lsdma-lab04", "haspp11eval01", "it-hpc-cxi03", "max-cfel015"]
+whitelist           = ["localhost"]
+#whitelist           = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx22614w", "zitpcx22614.fritz.box", "lsdma-lab04", "haspp11eval01", "it-hpc-cxi03", "max-cfel015"]
 #whitelist           = None
 
 # ZMQ port to get new requests
@@ -72,6 +74,7 @@ fix_subdirs          = ["commissioning", "current", "local"]
 # (needed if event detector is inotifyx_events or watchdog_events)
 monitored_dir        = /opt/hidra/data/source
 #monitored_dir       = /rd
+#monitored_dir       = /ramdisk
 
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
