Fixed typo in config

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -4,7 +4,7 @@
 
 # Path where the logfile will be created
 log_path            = /opt/hidra/logs
-#log_path            = /var/logs/hidra
+#log_path            = /var/log/hidra
 
 # Filename used for logging
 log_name            = datamanager.log
