--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,3 @@
 [flake8]
-exclude = .git,./test/codingTests, ./src/shared/logutils/, ./src/sender/eventdetectors/inotifyx-0.2.2/
+exclude = .git,./test/codingTests, ./src/shared/logutils/, ./src/sender/eventdetectors/inotifyx-0.2.2/, ./src/shared/cfel_optarg.py
 ignore = W503
