Reduced config file for Pilatus detector to minimum

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -96,7 +96,8 @@ history_size         = 0
 use_cleanup          = False
 
 # Intervall time (in seconds) used for clean up resp. checking of events
-# (only needed if event_detector_type is inotifyx_events or watchdog_events)
+# (only needed if event_detector_type is inotifyx_events together with
+#  use_cleanup enabled or if event_detector is watchdog_events)
 #action_time          = 150
 action_time          = 10
 
