--- a/conf/datamanager_pilatus.conf
+++ b/conf/datamanager_pilatus.conf
@@ -3,7 +3,7 @@
 #########################################
 
 # Path where the logfile will be created
-log_path            = /opt/hidra/logs
+log_path            = /var/log/hidra
 
 # Filename used for logging
 log_name            = datamanager.log
@@ -45,22 +45,20 @@ event_detector_type = inotifyx_events
 # exist when HiDRA is started and should not be removed during the run.
 # (needed if eventDetector is inotifyx_events or watchdog_events
 #  or if dataFetcher is file_fetcher)
-fix_subdirs          = ["commissioning", "current", "local"]
-#fix_subdirs          = ["commissioning/raw", "commissioning/scratch_bl",
-#                        "current/raw", "current/scratch_bl",
-#                        "local"]
+fix_subdirs          = ["commissioning/raw", "commissioning/scratch_bl",
+                        "current/raw", "current/scratch_bl",
+                        "local"]
 
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current"
 # and "local" are monitored
 # (needed if event detector is inotifyx_events or watchdog_events)
-monitored_dir        = /opt/hidra/data/source
-#monitored_dir       = /ramdisk
+monitored_dir       = /ramdisk
 
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
 # (needed if event detector is inotifyx_events or watchdog_events)
-monitored events     = {"IN_MOVED_TO": [".tif", ".cbf", ".img", ".edf"],
+monitored_events     = {"IN_MOVED_TO": [".tif", ".cbf", ".img", ".edf"],
                         "IN_CLOSE_WRITE": [".log"]}
 
 # Number of events stored to look for doubles
@@ -71,15 +69,6 @@ history_size         = 0
 # if some files were missed should be activated
 # (needed if eventDetector is inotifyx_events)
 use_cleanup          = False
-
-# Intervall time (in seconds) used for clean up resp. checking of events
-# (only needed if event_detector_type is inotifyx_events or watchdog_events)
-#action_time          = 150
-action_time          = 10
-
-# Time (in seconds) since last modification after which a file will be seen as closed
-# (needed if eventDetector is inotifyx_events (for clean up) or watchdog_events)
-time_till_closed     = 2
 
 #########################################
 ####    DataFetcher Configuration    ####
@@ -96,8 +85,7 @@ number_of_streams    = 4
 # (uses the fixed_stream_host and fixed_stream_port)
 use_data_stream      = True
 # Fixed host to send the data to with highest priority
-#fixed_stream_host    = zitpcx19282
-fixed_stream_host    = zitpcx22614w
+fixed_stream_host    = asap3-p00
 # Fixed port to send the data to with highest priority
 fixed_stream_port    = 50100
 
@@ -113,8 +101,5 @@ store_data           = False
 # options are:
 # True - data stays on the source
 # False - data is removed from the source after processing it
-# with_confirmation - only supported if use_data_stream is enabled;
-#                     data is removed from the source only after the target
-#                     sent a verification
 # (needed if data_fetcher_type is file_fetcher or http_fetcher)
 remove_data          = True
