Fixed changelog creation in bumpversion

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -12,6 +12,6 @@ replace = HiDRA develop
 [bumpversion:file:hidra.spec]
 search = %changelog
 replace = %changelog
-	{now:%a %b %d %Y} Manuela Kuhn <manuela.kuhn@desy.de> - {new_version}-1
-	Bump version
+	* {now:%a %b %d %Y} Manuela Kuhn <manuela.kuhn@desy.de> - {new_version}-1
+	- Bump version
 
