Data is written as pxxuser in receiver

--- a/conf/datareceiver.conf
+++ b/conf/datareceiver.conf
@@ -4,6 +4,7 @@
 
 # Path where logfile will be created
 log_path          = /opt/hidra/logs
+#log_path          = /var/log/hidra
 
 # Filename used for logging
 log_name          = datareceiver.log
@@ -24,6 +25,7 @@ procname          = hidra-receiver
 #whitelist         = a3p02.1-hosts
 whitelist         = None
 #whitelist         = ["localhost", "zitpcx19282.desy.de", "zitpcx22614", "lsdma-lab04"]
+#whitelist         = ["localhost"]
 
 # Where incoming data will be stored to
 target_dir        = /opt/hidra/data/zmq_target
@@ -31,6 +33,7 @@ target_dir        = /opt/hidra/data/zmq_target
 # Local IP to connect dataStream to
 # data_stream_ip    = zitpcx22614w.desy.de
 data_stream_ip    = zitpcx19282.desy.de
+#data_stream_ip    = asap3-p00
 
 # TCP port of data pipe
 data_stream_port  = 50100
