--- a/initscripts/hidra-receiver@.service
+++ b/initscripts/hidra-receiver@.service
@@ -6,7 +6,7 @@ After=network-online.target
 [Service]
 TimeoutStartSec=0
 WorkingDirectory=/opt/hidra
-#User=%iuser
+User=%iuser
 ExecStart=/opt/hidra/src/receiver/datareceiver.py --verbose --config_file /opt/hidra/conf/receiver_%i.conf
 
 [Install]
