Changed config format for data stream targets to combined list

--- a/conf/datamanager_pilatus.conf
+++ b/conf/datamanager_pilatus.conf
@@ -82,12 +82,10 @@ data_fetcher_type    = file_fetcher
 number_of_streams    = 4
 
 # Enable ZMQ pipe into storage system
-# (uses the fixed_stream_host and fixed_stream_port)
+# (uses data_stream_targets)
 use_data_stream      = True
-# Fixed host to send the data to with highest priority
-fixed_stream_host    = asap3-p00
-# Fixed port to send the data to with highest priority
-fixed_stream_port    = 50100
+# Fixed host and port to send the data to with highest priority
+data_stream_targets  = [["asap3-p00", 50100]]
 
 # Chunk size of file-parts getting send via zmq
 #1024*1024*10
