--- a/conf/datamanager_windows.conf
+++ b/conf/datamanager_windows.conf
@@ -15,11 +15,8 @@ log_size            = 10485760
 # Name with which the service should be running
 procname            = hidra
 
-# IP of the interface to bind to for external communication
+# IP/DNS name of the interface to bind to for external communication
 ext_ip              = 0.0.0.0
-#ext_ip              = zitpcx19282
-#ext_ip              = 131.169.185.121 ; #zitpcx19282
-#ext_ip              = 131.169.251.55 ; #asap3-p00
 
 #########################################
 ####   SignalHandler Configuration   ####
@@ -29,7 +26,8 @@ ext_ip              = 0.0.0.0
 com_port            = 50000
 
 # List of hosts allowed to connect
-whitelist           = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx22614w", "zitpcx22614.fritz.box", "lsdma-lab04", "haspp11eval01", "it-hpc-cxi03", "max-cfel015"]
+whitelist           = ["localhost"]
+#whitelist           = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx22614w", "zitpcx22614.fritz.box", "lsdma-lab04", "haspp11eval01", "it-hpc-cxi03", "max-cfel015"]
 #whitelist           = None
 
 # ZMQ port to get new requests
@@ -57,10 +55,14 @@ event_detector_type = watchdog_events
 #event_detector_type = zmq_events
 #event_detector_type = http_events
 
-# Subdirectories to be monitored and to store data to
+# Subdirectories to be monitored and to store data to. These directory have to
+# exist when HiDRA is started and should not be removed during the run.
 # (needed if eventDetector is inotifyx_events or watchdog_events
 #  or if dataFetcher is file_fetcher)
 fix_subdirs          = ["commissioning", "current", "local"]
+#fix_subdirs          = ["commissioning/raw", "commissioning/scratch_bl",
+#                        "current/raw", "current/scratch_bl",
+#                        "local"]
 
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current"
@@ -71,8 +73,9 @@ monitored_dir        = D:\hidra\data\source
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
 # (needed if event detector is inotifyx_events or watchdog_events)
-monitored_events     = {"IN_CLOSE_WRITE": [".tif", ".cbf", ".nxs"],
-                        "IN_MOVED_TO": [".log"]}
+monitored_events     = {"IN_CLOSE_WRITE": [""]}
+#monitored_events     = {"IN_CLOSE_WRITE": [".tif", ".cbf", ".nxs"],
+#                        "IN_MOVED_TO": [".log"]}
 #monitored events     = {"IN_MOVED_TO": [".tif", ".cbf", ".nxs"],
 #                        "IN_CLOSE_WRITE": [".log"]}
 #monitored_events     = {"NO_EVENT_MONITORED": [".cbf"]}
@@ -87,7 +90,8 @@ history_size         = 0
 use_cleanup          = False
 
 # Intervall time (in seconds) used for clean up resp. checking of events
-# (only needed if event_detector_type is inotifyx_events or watchdog_events)
+# (only needed if event_detector_type is inotifyx_events together with
+#  use_cleanup enabled or if event_detector is watchdog_events)
 #action_time          = 150
 action_time          = 10
 
@@ -99,7 +103,7 @@ time_till_closed     = 2
 # (needed if event_detector_type is zmq_events)
 event_det_port       = 50003
 
-# IP of the Eiger detector
+# IP/DNS name of the Eiger detector
 # (needed if event_detector_type is http_events)
 #haspp11e1m.desy.de
 #eiger_ip             = 192.168.138.52
@@ -126,16 +130,14 @@ data_fetcher_type    = file_fetcher
 data_fetcher_port    = 50010
 
 # Number of parallel data streams
-number_of_streams    = 1
+number_of_streams    = 8
 
 # Enable ZMQ pipe into storage system
-# (uses the fixed_stream_host and fixed_stream_port)
+# (uses data_stream_targets)
 use_data_stream      = False
-# Fixed host to send the data to with highest priority
-fixed_stream_host    = zitpcx19282
-#fixed_stream_host    = zitpcx22614w
-# Fixed Port to send the data to with highest priority
-fixed_stream_port    = 50100
+# Fixed host and port to send the data to with highest priority
+data_stream_targets  = [["zitpcx19282", 50100]]
+#data_stream_targets  = [["zitpcx22614w", 50100]]
 
 # Chunk size of file-parts getting send via zmq
 #1024*1024*10
@@ -147,7 +149,7 @@ chunksize            = 10485760
 # (needed if running on Windows)
 router_port          = 50004
 
-# Target to move the files into
+# Target to move the files into (needed if store_data is enabled)
 local_target         = D:\opt\hidra\data\target
 
 # Flag describing if the data should be stored in localTarget
@@ -155,5 +157,11 @@ local_target         = D:\opt\hidra\data\target
 store_data           = False
 
 # Flag describing if the files should be removed from the source
+# options are:
+# True - data stays on the source
+# False - data is removed from the source after processing it
+# with_confirmation - only supported if use_data_stream is enabled;
+#                     data is removed from the source only after the target
+#                     sent a verification
 # (needed if data_fetcher_type is file_fetcher or http_fetcher)
 remove_data          = False
