--- a/test/datamanager.conf
+++ b/test/datamanager.conf
@@ -117,13 +117,11 @@ data_fetcher_port    = 50010
 number_of_streams    = 1
 
 # Enable ZMQ pipe into storage system
-# (uses the fixed_stream_host and fixed_stream_port)
+# (uses data_stream_targets)
 use_data_stream      = False
-# Fixed host to send the data to with highest priority
-fixed_stream_host    = zitpcx19282
-#fixed_stream_host    = zitpcx22614w
-# Fixed Port to send the data to with highest priority
-fixed_stream_port    = 50100
+# Fixed host and port to send the data to with highest priority
+data_stream_targets  = [["zitpcx19282", 50100]]
+#data_stream_targets  = [["zitpcx22614w", 50100]]
 
 # Chunk size of file-parts getting send via zmq
 #1024*1024*10
