Modified explanations in config file

--- a/conf/datamanager.conf
+++ b/conf/datamanager.conf
@@ -47,7 +47,7 @@ control_pub_port    = 50005
 control_sub_port    = 50006
 
 #########################################
-####   EventDetector Configuration   ####
+####   eventdetector Configuration   ####
 #########################################
 
 # Type of event detector to use (options are:
@@ -61,8 +61,8 @@ event_detector_type = inotifyx_events
 
 # Subdirectories to be monitored and to store data to. These directory have to
 # exist when HiDRA is started and should not be removed during the run.
-# (needed if eventDetector is inotifyx_events or watchdog_events
-#  or if dataFetcher is file_fetcher)
+# (needed if event_detector is inotifyx_events or watchdog_events
+#  or if data_fetcher is file_fetcher)
 fix_subdirs          = ["commissioning", "current", "local"]
 #fix_subdirs          = ["commissioning/raw", "commissioning/scratch_bl",
 #                        "current/raw", "current/scratch_bl",
@@ -78,7 +78,7 @@ monitored_dir        = /opt/hidra/data/source
 
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
-# (needed if event detector is inotifyx_events or watchdog_events)
+# (needed if event_detector is inotifyx_events or watchdog_events)
 monitored_events     = {"IN_CLOSE_WRITE": [""]}
 #monitored_events     = {"IN_CLOSE_WRITE": [".tif", ".cbf", ".nxs"],
 #                        "IN_MOVED_TO": [".log"]}
@@ -87,22 +87,22 @@ monitored_events     = {"IN_CLOSE_WRITE": [""]}
 #monitored_events     = {"NO_EVENT_MONITORED": [".cbf"]}
 
 # Number of events stored to look for doubles
-# (needed if eventDetector is inotifyx_events or http_events)
+# (needed if event_detector is inotifyx_events or http_events)
 history_size         = 0
 
 # Flag describing if a clean up thread which regularly checks
 # if some files were missed should be activated
-# (needed if eventDetector is inotifyx_events)
+# (needed if event_detector is inotifyx_events)
 use_cleanup          = False
 
-# Intervall time (in seconds) used for clean up resp. checking of events
+# Interval time (in seconds) used for clean up resp. checking of events
 # (only needed if event_detector_type is inotifyx_events together with
 #  use_cleanup enabled or if event_detector is watchdog_events)
 #action_time          = 150
 action_time          = 10
 
 # Time (in seconds) since last modification after which a file will be seen as closed
-# (needed if eventDetector is inotifyx_events (for clean up) or watchdog_events)
+# (needed if event_detector is inotifyx_events (for clean up) or watchdog_events)
 time_till_closed     = 2
 
 # ZMQ port to get events from
@@ -122,7 +122,7 @@ eiger_api_version    = 1.5.0
 
 
 #########################################
-####    DataFetcher Configuration    ####
+####    datafetcher Configuration    ####
 #########################################
 
 # Module with methods specifying how to get the data
@@ -139,14 +139,15 @@ data_fetcher_port    = 50010
 number_of_streams    = 8
 
 # Enable ZMQ pipe into storage system
-# (uses data_stream_targets)
 use_data_stream      = False
 # Fixed host and port to send the data to with highest priority
+# (only needed if use_data_stream is enabled)
 data_stream_targets  = [["zitpcx19282", 50100]]
 #data_stream_targets  = [["zitpcx22614w", 50100]]
 
 # Chunk size of file-parts getting send via zmq
 #1024*1024*10
+#chunksize            = 102400
 chunksize            = 10485760
 #1024*1024*1024
 #chunksize            = 1073741824
@@ -159,7 +160,7 @@ router_port          = 50004
 local_target         = /opt/hidra/data/target
 #local_target         = /gpfs
 
-# Flag describing if the data should be stored in localTarget
+# Flag describing if the data should be stored in local_target
 # (needed if data_fetcher_type is file_fetcher or http_fetcher)
 store_data           = False
 
